fix: package.json dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "three": "^0.166.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+  "@babel/plugin-proposal-private-property-in-object": "^7.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,4 +47,6 @@
       "last 1 safari version"
     ]
   }
+
+
 }
